--- a/styles/style.css
+++ b/styles/style.css
@@ -27,6 +27,7 @@
 
 body {
 	width: 1600px;
+
 	margin: 0 auto;
 	background: #ffffff;
 	color: #555555;
@@ -186,6 +187,7 @@ body {
 }
 .description-organization {
 	padding: 100px 215px 90px 230px;
+	position: relative;
 }
 .description-organization .about-organization {
 	display: flex;
@@ -271,15 +273,105 @@ body {
     line-height: 24px;
     text-align: center;
 }
-.description-organization .arrow-left:after{
-	content: "<";
-}
-.description-organization .arrow-right:after {
-	content: ">";
-}
-.description-organization .arrow-left:after,
-.description-organization .arrow-right:after {
-	color: #dddddd;
-	background: #a7a7a7;
+.description-organization .arrow-right, 
+.description-organization .arrow-left {
+	display: inline-block;
 	padding: 12px;
+	background: #8b8b8b;
+}
+.description-organization .arrow-left {
+	position: absolute;
+	left: 230px;
+	bottom: 275px;
+}
+.description-organization .arrow-right {
+	position: absolute;
+    right: 215px;
+    bottom: 275px;
+}
+.description-organization .arrow-right:hover , 
+.description-organization .arrow-left:hover {
+	background: #c0301c;
+}
+.our-works {
+	padding: 100px 215px 90px 230px;
+}
+.menu-works {
+	display: inline-block;
+	width: 425px;
+
+}
+.menu-works .works-list {
+	display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.menu-works .works-list .item .link {
+	font-size: 16px;
+	font-family: "Roboto Slab";
+	text-decoration: none;
+	color: #555555;
+
+}
+.menu-works .works-list .item .link:hover {
+	color: #c0301c;
+}
+.our-works .work-levels {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.our-works .work-levels .level {
+	position: relative;
+	margin-bottom: 30px;
+}
+
+.our-works .work-levels .level .saturation-red {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #c0301c;
+	opacity: 0;
+	transition: all ease 0.5s;
+	display: block;
+}
+.our-works .work-levels .level:hover .saturation-red {
+	opacity: 0.6;
+}
+.our-works .work-levels .level .continue {
+	position: absolute;
+    bottom: 75px;
+    left: 50%;
+    transform: translate(-50%);
+    color: #fff;
+	text-align: center;
+	display: none;
+}
+.our-works .work-levels .level .continue .title {
+	font-size: 18px;
+	font-family: "Montserrat";
+    line-height: 24px;
+}
+.our-works .work-levels .level .continue .text {
+	display: block;
+	font-size: 12px;
+	font-family:"Roboto Slab"; 
+}
+.our-works .work-levels .level .continue .link {
+	display: block;
+    margin-top: 45px;
+    padding: 15px 20px;
+    background: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+	color: #c0301c;
+	font-size: 14px;
+	font-family: "Roboto Slab"; 
+
+}
+.our-works .work-levels .level:hover .continue {
+	display: block;
 }
