--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,6 @@
 
 body {
 	width: 1600px;
-
 	margin: 0 auto;
 	background: #ffffff;
 	color: #555555;
@@ -106,6 +105,10 @@ body {
 	border-radius: 2px;
 	text-transform: uppercase;
 	text-decoration: none;
+}
+.header .slang .button .link:hover {
+	color: #c0301c;
+	background: #fff;
 }
 .services-blok {
 	padding: 100px 215px 90px 230px;
@@ -273,60 +276,59 @@ body {
     line-height: 24px;
     text-align: center;
 }
-.description-organization .arrow-right, 
+.description-organization .arrow-right,
 .description-organization .arrow-left {
-	display: inline-block;
 	padding: 12px;
-	background: #8b8b8b;
+	background: #8f8f8f;
+	display: inline-block;
+
+}
+.description-organization .arrow-right {
+	position: absolute;
+	right: 215px;
+    bottom: 260px;
 }
 .description-organization .arrow-left {
 	position: absolute;
 	left: 230px;
-	bottom: 275px;
+	bottom: 260px;
 }
-.description-organization .arrow-right {
-	position: absolute;
-    right: 215px;
-    bottom: 275px;
-}
-.description-organization .arrow-right:hover , 
+.description-organization .arrow-right:hover,
 .description-organization .arrow-left:hover {
 	background: #c0301c;
 }
 .our-works {
 	padding: 100px 215px 90px 230px;
-}
-.menu-works {
-	display: inline-block;
-	width: 425px;
 
 }
-.menu-works .works-list {
+.our-works .menu-works {
+
+}
+.our-works .menu-works .works-list {
 	display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 420px;
+    margin: 0 auto;
 }
-.menu-works .works-list .item .link {
-	font-size: 16px;
-	font-family: "Roboto Slab";
+.our-works .menu-works .works-list .link {
 	text-decoration: none;
-	color: #555555;
-
+	font-family: "Roboto Slab";
+	font-size: 16px;
+	color:  #555555;
 }
-.menu-works .works-list .item .link:hover {
+.our-works .menu-works .works-list .link:hover {
 	color: #c0301c;
 }
 .our-works .work-levels {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 .our-works .work-levels .level {
-	position: relative;
 	margin-bottom: 30px;
+	position: relative;
 }
-
 .our-works .work-levels .level .saturation-red {
 	position: absolute;
 	top: 0;
@@ -343,35 +345,180 @@ body {
 }
 .our-works .work-levels .level .continue {
 	position: absolute;
-    bottom: 75px;
-    left: 50%;
+	left: 50%;
     transform: translate(-50%);
+    bottom: 95px;
     color: #fff;
-	text-align: center;
-	display: none;
+    display: none;
+}
+.our-works .work-levels .level:hover .continue {
+	display: block;
 }
 .our-works .work-levels .level .continue .title {
 	font-size: 18px;
 	font-family: "Montserrat";
-    line-height: 24px;
+	line-height: 24px;
 }
 .our-works .work-levels .level .continue .text {
-	display: block;
 	font-size: 12px;
-	font-family:"Roboto Slab"; 
+	font-family: "Roboto Slab";
+	display: block;
+	text-align: center;
 }
 .our-works .work-levels .level .continue .link {
 	display: block;
-    margin-top: 45px;
+    text-align: center;
+    margin-top: 30px;
     padding: 15px 20px;
-    background: #fff;
-    text-decoration: none;
     text-transform: uppercase;
-	color: #c0301c;
-	font-size: 14px;
-	font-family: "Roboto Slab"; 
+    background: #fff;
+    color: #c0301c;
+    text-decoration: none;
+    font-size: 16px;
+    font-family: "Roboto Slab";
+}
+.reviews {
+	background-image: url(../images/photo5.jpg);
+	height: 365px;
+	width: 100%;
+	position: relative;
+}
+.reviews .saturation-red {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #c0301c;
+	opacity: 0;
+	transition: all ease 0.5s;
+	display: block;
+	
+}
+.reviews:hover .saturation-red {
+	opacity: 0.6;
+}
+.reviews:hover .review {
+	display: block;
+}
+.reviews .review {
+    text-align: center;
+    display: none;
+    padding: 85px 0;
+    color: #fff;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+
 
 }
-.our-works .work-levels .level:hover .continue {
+.reviews .review .text {
+    display: block;
+    font-size: 30px;
+    font-family: "Roboto Slab";
+    line-height: 44px;
+}
+.reviews .review .link {
+	display: inline-block;
+	margin-top: 50px;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 18px;
+	font-family: "Roboto Slab";
+	padding: 15px 30px;
+	border: 3px solid #fff;
+	color: #fff;
+}
+.reviews .review .link:hover {
+	color: #c0301c;
+	background: #fff;
+
+}
+.news {
+	padding: 100px 215px 90px 230px;
+}
+.news .new {
+	display: flex;
+    justify-content: space-between;
+    margin-bottom: 70px;
+}
+.news .new .photo {
+	margin-right:  40px;
+}
+.news .new .description .name .title {
 	display: block;
+	font-size: 16px;
+	font-family: "Montserrat";
+	line-height: 24px;
+	font-weight: 600;
+}
+.news .new .description .name .author {
+	display: block;
+	font-size: 13px;
+	font-family: "Roboto Slab";
+	line-height: 24px;
+	font-style: italic;
+}
+.news .new .description .text-new {
+	font-size: 14px;
+	font-family: "Roboto Slab";
+	line-height: 24px;
+}
+.news .new .description .link {
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 13px;
+	line-height: 24px;
+	font-weight: 900;
+	color: #555555;
+
+}
+.brends {
+	background: #f8f8f8;
+	padding: 110px 215px 100px 230px;
+}
+.brends .brend-symbols {
+	display: flex;
+    height: 30px;
+    justify-content: space-around;
+    margin-bottom: 75px;
+}
+.brends .quote {
+	text-align: center;
+}
+.brends .quote .text {
+	font-size: 18px;
+	font-family: "Roboto Slab";
+	line-height: 30px;
+	padding: 0 175px;
+	font-style: italic;
+}
+.brends .quote .text:after,
+.brends .quote .text:before {
+	content:
+}
+.brends .quote .author {
+	font-size: 20px;
+	font-family: "Roboto Slab";
+	line-height: 30px;
+	display: block;
+	padding-top: 10px;
+}
+.brends .digest-block {
+	margin-top: 40px;
+	text-align: center;
+}
+.brends .digest-block .digest {
+    border-radius: 100%;
+    padding: 6px;
+    display: inline-block;
+    cursor: pointer;
+    background: #dddddd;
+}
+.brends .digest-block .digest-active {
+    border-radius: 100%;
+    padding: 6px;
+    display: inline-block;
+    cursor: pointer;
+    background: #c0301c;
 }
