--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ body {
 	margin: 0 auto;
 	background: #ffffff;
 	color: #555555;
-	
+
 }
 .header {
 	background-image: url(../images/header.jpg);
@@ -96,7 +96,7 @@ body {
 	padding-top: 50px;
 }
 .header .slang .button .link {
-	
+
 	color:#ffffff;
 	font-size: 16px;
 	font-family: "Montserrat";
@@ -110,21 +110,19 @@ body {
 	color: #c0301c;
 	background: #fff;
 }
-.services-blok {
+.services-block {
 	padding: 100px 215px 90px 230px;
-
 }
 .section-name {
 	padding-bottom: 70px;
 	text-align: center;
 }
-.section-name .section-title {
+.section-name .title {
 	text-transform: uppercase;
 	font-size: 20px;
 	font-family: "Montserrat";
-	
 }
-.section-name .section-title:after {
+.section-name .title:after {
 	content: "";
     width: 50px;
     height: 2px;
@@ -135,55 +133,52 @@ body {
 .section-name .description {
 	font-size: 16px;
 	font-family: "Roboto Slab";
-	
-
 }
-.services-blok .services-list {
+.services-block .services-list {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 }
-.services-blok .services-list .services-item {
+.services-block .services-list .services-item {
 	display: inline-block;
 	padding-right: 35px;
 	text-align: center;
 }
-.services-blok .services-list .services-item .item {
+.services-block .services-list .services-item .item {
 	display: inline-block;
 
 }
-.services-blok .services-list .services-item:last-of-type {
+.services-block .services-list .services-item:last-of-type {
 	padding-right: 0;
 }
-.services-blok .services-list .services-item .symbol-link {
+.services-block .services-list .services-item .symbol-link {
 	display: inline-block;
     border: 3px solid #ddd;
     padding: 15px;
     border-radius: 100%;
     background: #fff;
+}
+.services-block .services-list .services-item .symbol-link .symbol {
+    height: 40px;
 
 }
-.services-blok .services-list .services-item .symbol-link .symbol {
-    height: 40px;
-   
-}
-.services-blok .services-list .services-item .symbol-link-white {
+.services-block .services-list .services-item .symbol-link-white {
 	display: none;
 	border: 3px solid #ddd;
     padding: 15px;
     border-radius: 100%;
     background: #c0301c;
 }
-.services-blok .services-list .services-item .symbol-link-white .symbol {
+.services-block .services-list .services-item .symbol-link-white .symbol {
     height: 40px;
 }
-.services-blok .services-list .services-item .item:hover .symbol-link {
+.services-block .services-list .services-item .item:hover .symbol-link {
 	display: none;
 }
-.services-blok .services-list .services-item .item:hover .symbol-link-white {
+.services-block .services-list .services-item .item:hover .symbol-link-white {
 	display: inline-block;
 }
-.services-blok .services-list .services-item .item .symbol-link-hooks {
+.services-block .services-list .services-item .item .symbol-link-hooks {
 	font-weight: 900;
     font-size: 30px;
     font-family: sans-serif;
@@ -198,7 +193,7 @@ body {
     font-stretch: condensed;
     line-height: 74px;
 }
-.services-blok .services-list .services-item .item:hover .symbol-link-hooks {
+.services-block .services-list .services-item .item:hover .symbol-link-hooks {
 	color: #fff;
 	background: #c0301c;
 }
@@ -225,12 +220,12 @@ body {
 }
 .services-blok .services-list .services-item .symbol-link {
 	background-image: url(../images/icon.png);
-					  
+
 }
 .services-blok .services-list .services-item .symbol-link-help {
 	background-image: url(../images/help-red.png);
 }*/
-.services-blok .services-list .services-item .title {
+.services-block .services-list .services-item .title {
 	font-size: 14px;
 	font-family: "Montserrat";
 	line-height: 24px;
@@ -238,7 +233,7 @@ body {
 	text-align: center;
 	text-transform: uppercase;
 }
-.services-blok .services-list .services-item .text {
+.services-block .services-list .services-item .text {
 	font-size: 14px;
 	font-family: "Roboto Slab";
 	line-height: 24px;
@@ -297,11 +292,11 @@ body {
 	padding: 5px;
 	display: block;
 	margin-right: 5px;
-	
+
 }
 
 .workers-list > .item .social-list .link:last-of-type {
-	margin-right: 0; 
+	margin-right: 0;
 }
 .workers-list > .item:hover .photo .saturation {
 	opacity: 0.3;
@@ -385,7 +380,7 @@ body {
 	margin-bottom: 30px;
 	position: relative;
 }
-.our-works .work-levels .level .saturation-red {
+.our-works .work-levels .level .saturation {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -396,7 +391,7 @@ body {
 	transition: all ease 0.5s;
 	display: block;
 }
-.our-works .work-levels .level:hover .saturation-red {
+.our-works .work-levels .level:hover .saturation {
 	opacity: 0.6;
 }
 .our-works .work-levels .level .continue {
@@ -439,7 +434,7 @@ body {
 	width: 100%;
 	position: relative;
 }
-.reviews .saturation-red {
+.reviews .saturation {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -449,7 +444,7 @@ body {
 	opacity: 0.6;
 	transition: all ease 0.5s;
 	display: block;
-	
+
 }
 
 .reviews .review {
@@ -610,7 +605,7 @@ body {
 }
 .contact {
 	padding: 100px 215px 90px 230px;
-	
+
 }
 .contact .our-contacts {
 	display: block;
@@ -670,7 +665,7 @@ body {
 }
 .contact .our-contacts .email {
 	display: inline-block;
-	margin-bottom: 35px;		
+	margin-bottom: 35px;
 
 }
 .contact .our-contacts .email .symbol {
@@ -705,7 +700,7 @@ body {
 	display: inline-block;
 	margin-bottom: 15px;
 	margin-right: 20px;
-	
+
 }
 #formSubscribe .label {
 	margin: 10px;
@@ -748,7 +743,7 @@ body {
     outline: none;
     cursor: pointer;
     padding: 15px 40px;
- 
+
 }
 #formSubscribe  .text {
 	font-size: 12px;
@@ -766,14 +761,14 @@ body {
 .footer {
 	padding: 100px 215px 5px 230px;
 	background: #c0301c;
-	color: #ffffff; 
-	margin-bottom: 50px;
+	color: #ffffff;
+	margin-bottom: 50px; //????? nahera
 }
 .footer .section-name {
 	padding-bottom: 70px;
 	text-align: center;
 }
-.footer .section-name .section-title {
+.footer .section-name .title {
 	display: inline-block;
 	height: 35px;
 	margin: 0 auto;
@@ -781,7 +776,7 @@ body {
 	width: 159px;
 	background-repeat: space;
 }
-.footer .section-name .section-title:after {
+.footer .section-name .title:after {
 	content: "";
     width: 50px;
     height: 2px;
