--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@
 
 
 body {
-	min-width: 1024px;
+	min-width: 1300px;
 	width: 100%;
 	margin: 0 auto;
 	background: #ffffff;
@@ -757,6 +757,7 @@ body {
 	background: #c0301c;
 	color: #ffffff; 
 	width: 100%;
+	box-sizing: border-box;
 	
 }
 .footer .section-name {
